--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Nigam Mishra" />
 
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <!-- <link rel="manifest" href="./manifest.json" /> -->
 
     <!-- CDN Stylesheets -->
     <link
